--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo Site</title>
     <link rel="stylesheet" href="css/site.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 </head>
 
 <body>
